--- a/clan.html
+++ b/clan.html
@@ -97,7 +97,7 @@
     <p>Теперь эта страница доступна по адресу:<br>
       <a id="new-url" href="#">—</a>
     </p>
-    <p>Запомните, пожалуйста, новую ссылку, ведь старая исчезнет через неделю!</p>
+    <p>Запомните, пожалуйста, новую ссылку, ведь старая исчезнет из интернета через неделю!</p>
     <button id="go-button">Перейти</button>
   </div>
 
