--- a/clan_stable.html
+++ b/clan_stable.html
@@ -105,7 +105,7 @@
       const url = new URL(window.location.href);
       const parts = url.hostname.split('.');
       const idx = parts.indexOf('netlify');
-      if (idx > 0) parts[idx-1] = 'heroeswm';
+      if (idx > 0) parts[idx-1] = 'dmkz';
       url.hostname = parts.join('.');
       const newUrl = url.toString();
 
