--- a/wartab3.html
+++ b/wartab3.html
@@ -2,7 +2,6 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Редирект на новый домен</title>
   <style>
     /* Фон затемнения */
@@ -12,36 +11,34 @@
       width: 100vw; height: 100vh;
       background: rgba(0, 0, 0, 0.5);
       opacity: 0; visibility: hidden;
-      transition: opacity 0.3s ease;
+      transition: opacity 0.5s ease;
       z-index: 1000;
     }
+
+    /* Окно сообщения */
+    #info-window {
+      position: fixed;
+      top: 50%; left: 50%;
+      transform: translate(-50%, -50%) scale(0.8);
+      background: #fff;
+      padding: 2rem;
+      width: 90%;
+      max-width: 420px;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+      text-align: center;
+      opacity: 0;
+      transition: opacity 0.5s ease, transform 0.5s ease;
+      z-index: 1001;
+      font-family: 'Arial', sans-serif;
+    }
+
+    /* Плавное появление */
     #overlay.show {
       opacity: 1; visibility: visible;
     }
-
-    /* Общие стили окна */
-    #info-window {
-      position: fixed;
-      background: #fff;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-      opacity: 0;
-      transition: opacity 0.3s ease, transform 0.3s ease, bottom 0.3s ease;
-      z-index: 1001;
-      font-family: Arial, sans-serif;
-    }
     #info-window.show {
       opacity: 1;
-    }
-
-    /* Десктоп‑версия: по центру */
-    #info-window {
-      top: 50%; left: 50%;
-      transform: translate(-50%, -50%) scale(0.8);
-      width: 400px; max-width: 90%;
-      border-radius: 12px;
-      padding: 2rem;
-    }
-    #info-window.show {
       transform: translate(-50%, -50%) scale(1);
     }
 
@@ -50,25 +47,18 @@
       margin: 0 0 1rem;
       font-size: 1.5rem;
       color: #4e54c8;
-      text-align: center;
     }
-    /* Текст и ссылка */
+
+    /* Текст ссылки */
     #info-window p {
-      margin: 0 0 1.5rem;
+      margin: 0.5rem 0 1.5rem;
       font-size: 1rem;
       color: #333;
       word-break: break-all;
-      text-align: center;
-    }
-    #new-url {
-      color: #4e54c8;
-      text-decoration: none;
     }
 
-    /* Кнопка */
+    /* Стили кнопки */
     #go-button {
-      display: block;
-      margin: 0 auto;
       padding: 0.75rem 1.5rem;
       font-size: 1rem;
       font-weight: bold;
@@ -78,52 +68,33 @@
       border-radius: 6px;
       cursor: pointer;
       outline: none;
-      animation: pulse 2s ease-in-out infinite;
       transition: transform 0.2s ease;
+      animation: pulse 2s ease-in-out infinite;
     }
     #go-button:hover {
-      transform: scale(1.05);
-    }
-    @keyframes pulse {
-      0%,100% { transform: scale(1); }
-      50% { transform: scale(1.03); }
+      transform: scale(1.1);
     }
 
-    /* --- Адаптация для мобильных портретных экранов --- */
-    @media (max-width: 600px) {
-      #info-window {
-        /* bottom-sheet */
-        top: auto; left: 0; bottom: -100%;
-        transform: translateY(0);
-        width: 100vw;
-        max-width: 100%;
-        border-radius: 12px 12px 0 0;
-        padding: 1.5rem 1rem;
-      }
-      #info-window.show {
-        bottom: 0;
-      }
-      #info-window h2 {
-        font-size: 1.25rem;
-      }
-      #info-window p {
-        font-size: 0.95rem;
-      }
-      #go-button {
-        width: 100%;
-        padding: 1rem;
-        font-size: 1.1rem;
-      }
+    /* Анимация пульсации */
+    @keyframes pulse {
+      0%,100% { transform: scale(1); }
+      50%    { transform: scale(1.05); }
+    }
+
+    /* Ссылка */
+    #new-url {
+      color: #4e54c8;
+      text-decoration: none;
     }
   </style>
 </head>
 <body>
 
+  <!-- Оверлей и окно -->
   <div id="overlay"></div>
   <div id="info-window">
     <h2>Сайт внезапно переехал!</h2>
-    <p>
-      Теперь эта страница доступна по адресу:<br>
+    <p>Теперь эта страница доступна по адресу:<br>
       <a id="new-url" href="#">—</a>
     </p>
     <button id="go-button">Перейти</button>
@@ -131,11 +102,10 @@
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      // Собираем новый URL
       const url = new URL(window.location.href);
       const parts = url.hostname.split('.');
       const idx = parts.indexOf('netlify');
-      if (idx > 0) parts[idx - 1] = 'heroeswm';
+      if (idx > 0) parts[idx-1] = 'dmkz';
       url.hostname = parts.join('.');
       const newUrl = url.toString();
 
@@ -144,11 +114,12 @@
       link.href = newUrl;
       link.textContent = newUrl;
 
-      // Кнопка
-      document.getElementById('go-button')
-        .addEventListener('click', () => window.location.href = newUrl);
+      // Перенаправление по кнопке
+      document.getElementById('go-button').addEventListener('click', () => {
+        window.location.href = newUrl;
+      });
 
-      // Плавный показ
+      // Показываем окно
       requestAnimationFrame(() => {
         document.getElementById('overlay').classList.add('show');
         document.getElementById('info-window').classList.add('show');
