--- a/wartab.html
+++ b/wartab.html
@@ -4,54 +4,62 @@
   <meta charset="UTF-8">
   <title>Редирект на новый домен</title>
   <style>
-    /* Основное окно */
+    /* Фон затемнения */
+    #overlay {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      background: rgba(0, 0, 0, 0.5);
+      opacity: 0; visibility: hidden;
+      transition: opacity 0.5s ease;
+      z-index: 1000;
+    }
+
+    /* Окно сообщения */
     #info-window {
       position: fixed;
       top: 50%; left: 50%;
       transform: translate(-50%, -50%) scale(0.8);
       background: #fff;
-      padding: clamp(1.5rem, 3vw, 2.5rem);
-      width: 90vw;
+      padding: 2rem;
+      width: 90%;
       max-width: 420px;
-      max-height: 80vh;        /* не даём окну вырасти выше 80% высоты экрана */
-      overflow-y: auto;        /* если контента больше — скроллим внутри */
       border-radius: 12px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.2);
       text-align: center;
       opacity: 0;
-      transition: opacity .3s ease,
-                  transform .3s ease,
-                  bottom .3s ease;
+
+      transition: opacity 0.3s ease,
+                  transform 0.3s ease,
+                  bottom 0.3s ease;
       z-index: 1001;
       font-family: Arial, sans-serif;
-    }
 
-    /* Показываем */
+    }
     #info-window.show {
       opacity: 1;
       transform: translate(-50%, -50%) scale(1);
     }
 
-    /* Заголовок */
+
     #info-window h2 {
       margin: 0 0 1rem;
-      font-size: clamp(1.75rem, 5vw, 2.25rem);  /* от 1.75 до 2.25 rem */
+      font-size: 1.5rem;
       color: #4e54c8;
     }
 
-    /* Текст и ссылка */
+    /* Текст ссылки */
     #info-window p {
       margin: 0.5rem 0 1.5rem;
-      font-size: clamp(1.1rem, 4vw, 1.3rem);     /* от 1.1 до 1.3 rem */
+      font-size: 1rem;
       color: #333;
       word-break: break-all;
     }
 
-    /* Кнопка */
+    /* Стили кнопки */
     #go-button {
-      display: inline-block;
-      padding: clamp(0.75rem, 2.5vw, 1.25rem) clamp(1.5rem, 4vw, 2rem);
-      font-size: clamp(1rem, 3vw, 1.3rem);
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
       font-weight: bold;
       color: #fff;
       background: linear-gradient(135deg, #4e54c8, #8f94fb);
@@ -59,41 +67,35 @@
       border-radius: 6px;
       cursor: pointer;
       outline: none;
-      transition: transform .2s ease;
+      transition: transform 0.2s ease;
       animation: pulse 2s ease-in-out infinite;
-      white-space: nowrap;
     }
-    #go-button:hover { transform: scale(1.05); }
 
+    #go-button:hover { transform: scale(1.05); }
     @keyframes pulse {
       0%,100% { transform: scale(1); }
-      50%    { transform: scale(1.03); }
+      50% { transform: scale(1.03); }
     }
 
-    /* Мобильный bottom-sheet для портрета */
+    /* --- Мобильный bottom-sheet для портрета --- */
     @media (max-width: 600px) {
       #info-window {
-        top: auto; left: 0; right: 0; bottom: -100%;
+        /* сброс центрирования */
+        top: auto; left: 0; right: auto; bottom: -100%;
         transform: none !important;
         width: 100vw; max-width: 100%;
-        max-height: 90vh;    /* чуть больше, но с запасом */
         border-radius: 12px 12px 0 0;
-        padding: clamp(1rem, 4vw, 2rem);
+        padding: 1.5rem 1rem;
       }
       #info-window.show {
         bottom: 0;
       }
-      #info-window h2 {
-        font-size: clamp(1.5rem, 6vw, 2rem);
-      }
-      #info-window p {
-        font-size: clamp(1rem, 4vw, 1.2rem);
-        margin-bottom: 1rem;
-      }
+      #info-window h2 { font-size: 1.25rem; }
+      #info-window p { font-size: 0.95rem; margin-bottom: 1rem; }
       #go-button {
         width: 100%;
-        padding: clamp(1rem, 5vw, 1.5rem);
-        font-size: clamp(1.1rem, 4vw, 1.4rem);
+        padding: 1rem;
+        font-size: 1.1rem;
       }
     }
   </style>
