--- a/wartab.html
+++ b/wartab.html
@@ -28,20 +28,21 @@
       box-shadow: 0 8px 20px rgba(0,0,0,0.2);
       text-align: center;
       opacity: 0;
-
-      transition: opacity 0.3s ease,
-                  transform 0.3s ease,
-                  bottom 0.3s ease;
+      transition: opacity 0.5s ease, transform 0.5s ease;
       z-index: 1001;
-      font-family: Arial, sans-serif;
+      font-family: 'Arial', sans-serif;
+    }
 
+    /* Плавное появление */
+    #overlay.show {
+      opacity: 1; visibility: visible;
     }
     #info-window.show {
       opacity: 1;
       transform: translate(-50%, -50%) scale(1);
     }
 
-
+    /* Заголовок */
     #info-window h2 {
       margin: 0 0 1rem;
       font-size: 1.5rem;
@@ -70,33 +71,20 @@
       transition: transform 0.2s ease;
       animation: pulse 2s ease-in-out infinite;
     }
-
-    #go-button:hover { transform: scale(1.05); }
-    @keyframes pulse {
-      0%,100% { transform: scale(1); }
-      50% { transform: scale(1.03); }
+    #go-button:hover {
+      transform: scale(1.1);
     }
 
-    /* --- Мобильный bottom-sheet для портрета --- */
-    @media (max-width: 600px) {
-      #info-window {
-        /* сброс центрирования */
-        top: auto; left: 0; right: auto; bottom: -100%;
-        transform: none !important;
-        width: 100vw; max-width: 100%;
-        border-radius: 12px 12px 0 0;
-        padding: 1.5rem 1rem;
-      }
-      #info-window.show {
-        bottom: 0;
-      }
-      #info-window h2 { font-size: 1.25rem; }
-      #info-window p { font-size: 0.95rem; margin-bottom: 1rem; }
-      #go-button {
-        width: 100%;
-        padding: 1rem;
-        font-size: 1.1rem;
-      }
+    /* Анимация пульсации */
+    @keyframes pulse {
+      0%,100% { transform: scale(1); }
+      50%    { transform: scale(1.05); }
+    }
+
+    /* Ссылка */
+    #new-url {
+      color: #4e54c8;
+      text-decoration: none;
     }
   </style>
 </head>
@@ -114,12 +102,10 @@
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      const url = new URL(location.href);
+      const url = new URL(window.location.href);
       const parts = url.hostname.split('.');
       const idx = parts.indexOf('netlify');
-
       if (idx > 0) parts[idx-1] = 'dmkz';
-
       url.hostname = parts.join('.');
       const newUrl = url.toString();
 
@@ -128,10 +114,10 @@
       link.href = newUrl;
       link.textContent = newUrl;
 
-
-      document.getElementById('go-button')
-              .addEventListener('click', () => location.href = newUrl);
-
+      // Перенаправление по кнопке
+      document.getElementById('go-button').addEventListener('click', () => {
+        window.location.href = newUrl;
+      });
 
       // Показываем окно
       requestAnimationFrame(() => {
