--- a/wartab3.html
+++ b/wartab3.html
@@ -5,6 +5,16 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Редирект на новый домен</title>
   <style>
+    /* Чтобы padding и border не вылезали за габариты элемента */
+    *, *::before, *::after {
+      box-sizing: border-box;
+    }
+    body {
+      margin: 0;
+      overflow-x: hidden; /* защищает от случайного горизонтального скролла */
+      font-family: Arial, sans-serif;
+    }
+
     /* Фон затемнения */
     #overlay {
       position: fixed;
@@ -19,53 +29,46 @@
       opacity: 1; visibility: visible;
     }
 
-    /* Общие стили окна */
+    /* Обычное модальное окно */
     #info-window {
       position: fixed;
-      background: #fff;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-      opacity: 0;
-      transition: opacity 0.3s ease, transform 0.3s ease, bottom 0.3s ease;
-      z-index: 1001;
-      font-family: Arial, sans-serif;
-    }
-    #info-window.show {
-      opacity: 1;
-    }
-
-    /* Десктоп‑версия: по центру */
-    #info-window {
       top: 50%; left: 50%;
       transform: translate(-50%, -50%) scale(0.8);
       width: 400px; max-width: 90%;
-      border-radius: 12px;
+      background: #fff;
       padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+      opacity: 0;
+      transition:
+        opacity 0.3s ease,
+        transform 0.3s ease,
+        bottom 0.3s ease;
+      z-index: 1001;
     }
     #info-window.show {
+      opacity: 1;
       transform: translate(-50%, -50%) scale(1);
     }
 
-    /* Заголовок */
+    /* Содержимое окна */
     #info-window h2 {
       margin: 0 0 1rem;
       font-size: 1.5rem;
       color: #4e54c8;
       text-align: center;
     }
-    /* Текст и ссылка */
     #info-window p {
       margin: 0 0 1.5rem;
       font-size: 1rem;
       color: #333;
-      word-break: break-all;
       text-align: center;
+      word-break: break-all;
     }
-    #new-url {
+    #info-window a {
       color: #4e54c8;
       text-decoration: none;
     }
-
-    /* Кнопка */
     #go-button {
       display: block;
       margin: 0 auto;
@@ -77,7 +80,6 @@
       border: none;
       border-radius: 6px;
       cursor: pointer;
-      outline: none;
       animation: pulse 2s ease-in-out infinite;
       transition: transform 0.2s ease;
     }
@@ -86,16 +88,21 @@
     }
     @keyframes pulse {
       0%,100% { transform: scale(1); }
-      50% { transform: scale(1.03); }
+      50%    { transform: scale(1.03); }
     }
 
-    /* --- Адаптация для мобильных портретных экранов --- */
+    /* Мобильный bottom‑sheet для портретной ориентации */
     @media (max-width: 600px) {
       #info-window {
-        /* bottom-sheet */
-        top: auto; left: 0; bottom: -100%;
-        transform: translateY(0);
-        width: 100vw;
+        /* сброс центрирования */
+        top: auto;
+        left: 0;
+        right: 0;
+        bottom: -100%;
+        transform: none !important;
+
+        /* ширина вместе с padding = 100% экрана */
+        width: 100%;
         max-width: 100%;
         border-radius: 12px 12px 0 0;
         padding: 1.5rem 1rem;
@@ -108,6 +115,7 @@
       }
       #info-window p {
         font-size: 0.95rem;
+        margin-bottom: 1rem;
       }
       #go-button {
         width: 100%;
@@ -131,24 +139,22 @@
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      // Собираем новый URL
       const url = new URL(window.location.href);
       const parts = url.hostname.split('.');
       const idx = parts.indexOf('netlify');
-      if (idx > 0) parts[idx - 1] = 'heroeswm';
+      if (idx > 0) parts[idx - 1] = 'dmkz';
       url.hostname = parts.join('.');
       const newUrl = url.toString();
 
-      // Вставляем ссылку
       const link = document.getElementById('new-url');
       link.href = newUrl;
       link.textContent = newUrl;
 
-      // Кнопка
       document.getElementById('go-button')
-        .addEventListener('click', () => window.location.href = newUrl);
+              .addEventListener('click', () => {
+        window.location.href = newUrl;
+      });
 
-      // Плавный показ
       requestAnimationFrame(() => {
         document.getElementById('overlay').classList.add('show');
         document.getElementById('info-window').classList.add('show');
